apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'com.bmuschko.nexus'
buildscript {
	repositories {
		jcenter()
	}

	dependencies {
		classpath 'com.bmuschko:gradle-nexus-plugin:2.2'
		
	}
}

sourceCompatibility = 1.8
version = '3.0.0'
jar {
    manifest {
        attributes 'Implementation-Title': 'Cyclops Lambda Utils', 'Implementation-Version': version
    }
}

repositories {
    mavenCentral()
}

dependencies {
//	compile 'cglib:cglib:3.1'
	compile 'com.nurkiewicz.lazyseq:lazyseq:0.0.1'
	compile 'org.pcollections:pcollections:2.1.2'
	compile group: 'org.projectlombok', name: 'lombok', version:'1.16.2'
    testCompile group: 'junit', name: 'junit', version: '4.+'
	testCompile group: 'org.hamcrest', name: 'hamcrest-all', version:'1.3'
}

test {
    systemProperties 'property': 'value'
}

modifyPom {
	project {
		name 'cyclops-base'
		description 'Lambda utils for Java 8'
		url 'http://advertising.com'
		inceptionYear '2015'

		groupId 'com.aol.advertising.cyclops'
		artifactId 'lambda-utils'
		version "$version"
		
		scm {
			url 'ssh://git@stash.ops.aol.com:2022/lana/cyclops.git'
			connection 'ssh://git@stash.ops.aol.com:2022/lana/cyclops.git'
			developerConnection 'ssh://git@stash.ops.aol.com:2022/lana/cyclops.git'
		}

		licenses {
			license {
				name 'The Apache Software License, Version 2.0'
				url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
				distribution 'repo'
			}
		}

		developers {
			developer {
				id 'johnmcclean-aol'
				name 'John McClean'
				email 'john.mcclean@teamaol.com'
			}
		}
	}
}

extraArchive {
	sources = false
	tests = false
	javadoc = false
}

nexus {
	sign = false
	repositoryUrl = 'http://cmmaven.cm.aol.com:8081/nexus/content/repositories/aol-advertising'
	snapshotRepositoryUrl = 'http://cmmaven.cm.aol.com:8081/nexus/content/groups/public'
	
}


